--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@ h2 {
 </a>
 
 	<a href="comedia.html" target="_blank">
-			<button class="button" style="vertical-align:middle" 			<a href="comdia.html"><span>COMEDIA </span>
+			<button class="button" style="vertical-align:middle" 			<a href="ComEdia.html"><span>COMEDIA </span>
 					</button>
 </a>
 
 	<a href="drama.html" target="_blank">
-			<button class="button" style="vertical-align:middle" 			<a href="drama.html"><span>DRAMA </span>
+			<button class="button" style="vertical-align:middle" 			<a href="Drama.html"><span>DRAMA </span>
 					</button>
 </a>
 	<a href="infantil.html" target="_blank">
-			<button class="button" style="vertical-align:middle" 			<a href="infantil.html"><span>INFANTIL </span>
+			<button class="button" style="vertical-align:middle" 			<a href="Infantil.html"><span>INFANTIL </span>
 					</button>
 </a>
 		
