--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ h2 {
 </a>
 
 	<a href="comedia.html" target="_blank">
-			<button class="button" style="vertical-align:middle" 			<a href="ComEdia.html"><span>COMEDIA </span>
+			<button class="button" style="vertical-align:middle" 			<a href="Comedia.html"><span>COMEDIA </span>
 					</button>
 </a>
 
